created auth path with passport local authentication strategy; created user method with pre-save middleware for hashing password and compare passwords method

--- a/src/components/form-button/form-button.styles.scss
+++ b/src/components/form-button/form-button.styles.scss
@@ -13,11 +13,11 @@
     }
 
     &--google {
-        background-color: $color-blue-light-2;
+        background-color: $color-primary-5;
         width: 14rem;
 
         &:hover {
-            background-color: $color-blue-light-1;
+            background-color: $color-primary-5;
             color: black
         }
     }
