--- a/src/components/todo-new-modal/todo-new-modal.scss
+++ b/src/components/todo-new-modal/todo-new-modal.scss
@@ -5,7 +5,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: $color-white;
+    color: $color-black;
 
     z-index: 30;
 
